# dgcgears

./: README.md  meson.build  meson_options.txt
src/: blue.vert  dgcgears.c  green.vert  matrix.c  matrix.h  meson.build  red.vert
src/wsi/: metal.m  wayland.c  wsi.c  wsi.h  xcb.c
